--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <title>Resume</title>
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/jQuery.js"></script>
-    <script src="js/helper.js"></script>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width">
 </head>
 
@@ -19,18 +17,76 @@
             <ul id="topContacts" class="flex-box"></ul>
         </div>
         <div style="clear: both;"></div>
-        <div id="workExperience" class="gray">
-            <h2>Work Experience</h2>
+
+        <div class="sections light-gray">
+        <div class="panel-group" id="accordion">
+
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                  Work Experience
+                </a>
+              </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse">
+              <div class="panel-body light-blue">
+                <div id="workExperience" class="light-blue">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                  Projects
+                </a>
+              </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse">
+              <div class="panel-body">
+                <div id="projects">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                  Education
+                </a>
+              </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse">
+              <div class="panel-body">
+                <div id="education">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+                  Where I've Lived and Worked
+                </a>
+              </h4>
+            </div>
+            <div id="collapseFour" class="panel-collapse collapse">
+              <div class="panel-body">
+                <div id="mapDiv">
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
-        <div id="projects">
-            <h2>Projects</h2>
-        </div>
-        <div id="education" class="gray">
-            <h2>Education</h2>
-        </div>
-        <div id="mapDiv">
-            <h2>Where I've Lived and Worked</h2>
-        </div>
+
         <div id="lets-connect" class="dark-gray">
             <h2 class="connect center-text">Let's Connect</h2>
             <ul id="footerContacts" class="flex-box">
@@ -38,6 +94,10 @@
         </div>
     </div>
 
+    <script src="js/jQuery.js"></script>
+    <script src="js/helper.js"></script>
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <script src="js/resumeBuilder.js"></script>
     <script type="text/javascript">
         if (document.getElementsByClassName('flex-item').length === 0) {
