--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width">
 </head>
 
-<!-- TODO: add bootstrap functionality -->
 <html>
 
 <body>
@@ -30,8 +29,8 @@
               </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
-              <div class="panel-body light-blue">
-                <div id="workExperience" class="light-blue">
+              <div class="panel-body">
+                <div id="workExperience" class="open-box">
                 </div>
               </div>
             </div>
@@ -47,7 +46,7 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
               <div class="panel-body">
-                <div id="projects">
+                <div id="projects" class="open-box">
                 </div>
               </div>
             </div>
@@ -63,7 +62,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
               <div class="panel-body">
-                <div id="education">
+                <div id="education" class="open-box">
                 </div>
               </div>
             </div>
@@ -79,7 +78,7 @@
             </div>
             <div id="collapseFour" class="panel-collapse collapse">
               <div class="panel-body">
-                <div id="mapDiv">
+                <div id="mapDiv" class="open-box">
                 </div>
               </div>
             </div>
